refactor: warning 제거
#17